[package]
name = "affirm"
version = "1.0.0"
edition = "2021"
authors = ["Ben Raz <your@email.com>"]
license = "AGPLv3"
description = "A rust-based `yes` clone"
readme = "README.md"
homepage = "https://github.com/benraz123/affirm"
repository = "https://github.com/benraz123/affirm"
keywords = ["cli", "infinity", "joke"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
